    - Install custom blkid.conf to use /dev/.blkid.tab since we don't
      expect device names to survive a reboot
    - No lsb_release call in mount.preinst since we'd need Pre-Depends
      (LP: #383697).
    - Do not install initramfs hook, since our initramfs already handles
      including blkid.
    - Mention mountall(8) in fstab(5) manpages, along with its special
      options.

 -- Scott James Remnant <scott@ubuntu.com>  Mon, 22 Mar 2010 16:39:21 +0000

util-linux (2.17.2-1) UNRELEASED; urgency=low

  [Pascal Terjan]

  * libblkid: reset BLKID_TINY_DEV flag in blkid_probe_set_device

  [Pierre Hauweele]

  * ionice: fix typo

  [Mike Frysinger]

  * mount: properly ignore comments in /etc/filesystems

  [Henne Vogelsang]

  * lscpu: fix cpuid opcode detection

  [Yoshihiro Takahashi]

  * mount: posix option of vfat is obsolete

  [Scott James Remnant]

  * Merge remote branch 'origin/stable/v2.17' into stable/v2.17

  [Colin Watson]

  * libblkid: fix infinite loop when probe chain bails out early

  [Karel Zak]

  * libblkid: support alignment_offset=-1
  * libblkid: more robust minix probing
  * libblkid: fix display of device size
  * swapon: remove " (deleted)" from filenames from /proc/swaps
  * libblkid: remove "0x" prefix from DRBD UUID
  * wipefs: cleanup usage() and man page
  * mount: more explicitly explain fstab usage in mount.8
  * lib: add #ifndef around min() max() macros
  * fdisk: fix -b <sectorsize>
  * docs: update AUTHORS file
  * docs: add v2.17.2 ReleaseNotes
  * build-sys: release++ (v2.17.2)
  * po: merge changes

  [localization folks]

  * po: update vi.po (from translationproject.org) (Clytie Siddall)
  * po: update pl.po (from translationproject.org) (Jakub Bogusz)
  * po: update ja.po (from translationproject.org) (Makoto Kato)

 -- Scott James Remnant <scott@ubuntu.com>  Mon, 22 Mar 2010 14:54:31 +0000

util-linux (2.17-0ubuntu3) lucid; urgency=low

  * Fix infinite loop in blkid when superblocks_probe bails out right at the